2004-11-26  Dalibor Topic  <robilad@kaffe.org>

	*  libraries/javalib/gnu/java/nio/FileLock.java:
        Resynced with GNU Classpath.

	2004-11-18  Casey Marshall  <csm@gnu.org>

        * gnu/java/nio/FileLock.java (isValid): locks are valid if the
        channel is open.

2004-11-26  Dalibor Topic  <robilad@kaffe.org>

	*  libraries/javalib/java/awt/print/PrinterJob.java:
        Resynced with GNU Classpath.

	2004-11-17  Michael Koch  <konqueror@gmx.de>

        * java/awt/print/PrinterJob.java: Reformatted.

	2004-11-17  Jerry Quinn  <jlquinn@optonline.net>

        * java/awt/print/PrinterJob.java (lookupPrintServices,
        getPrintService, setPrintService): Implement.
        (lookupStreamPrintServices): Add commented out implementation.
        (printer): New field.

2004-11-26  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/net/Socket.java:
        Resynced with GNU Classpath.

	2004-11-17  Michael Koch  <konqueror@gmx.de>

        * java/net/Socket.java (getPort): Return 0 in error case.

2004-11-26  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/nio/DirectByteBufferImpl.java:
        Resynced with GNU Classpath.

	2004-11-17  Michael Koch  <konqueror@gmx.de>

        *  java/nio/DirectByteBufferImpl.java
        (owner): Updated comment.
        (allocate): New method.

2004-11-26  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/net/URL.java:
        Resynced with GNU Classpath.

	2004-11-17  Michael Koch  <konqueror@gmx.de>

        * java/net/URL.java (URL): Handle case when argument is null.

2004-11-26  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/beans/Beans.java,
	libraries/javalib/java/beans/PropertyChangeEvent.java,
	libraries/javalib/java/beans/PropertyEditorSupport.java:
        Resynced with GNU Classpath.

	2004-11-17  Michael Koch  <konqueror@gmx.de>

        * java/beans/Beans.java,
        java/beans/PropertyChangeEvent.java,
        java/beans/PropertyEditorSupport.java: