@@ -1,3 +1,8 @@
+2004-11-27  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/java/util/ResourceBundle.java:
+	Reindented to match GNU Classpath's version more closely.
+
 2004-11-26  Dalibor Topic  <robilad@kaffe.org>
 
 	*  libraries/javalib/gnu/java/nio/FileLock.java:
